--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ psycopg[binary, pool]>=3.2.1,<3.3
 channels>=4.1.0,<4.2
 channels-redis>=4.2.0,<4.3
 daphne>=4.1.2,<4.2
+drf-spectacular>=0.9.2,<0.10
+djangorestframework-jwt>=1.11.0,<1.12
