Connect to websocket, send and receive messages to channels group

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,7 @@ services:
       - DB_PASS=${DB_PASS}
       - DB_NAME=${DB_NAME}
       - ROOM_SIZE_THRESHOLD=${ROOM_SIZE_THRESHOLD}
+      - TESTING=${TESTING}
     depends_on: 
       - db
     
