--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,4 @@ djangorestframework-simplejwt>=5.3.1,<5.4
 pytest-asyncio>=0.24.0,<0.25
 pytest-django>=4.9.0,<4.10
 django-cors-headers>=4.5.0,<4.6
+celery>=5.4.0,<5.5
